# OpenArm

./: .gitignore  .gitmodules  LICENSE  README.md
.github/ISSUE_TEMPLATE/: mechanical-issue.md  openarm-team-issue.md
CtrlBoard-H7_4310/: .mxproject  README.md  STM32H7.ioc  event_recorder_save_1.csv  plotter.py
CtrlBoard-H7_4310/Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
CtrlBoard-H7_4310/Core/Src/: dcmi.c  fdcan.c  gpio.c  i2c.c  main.c  octospi.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
CtrlBoard-H7_4310/MDK-ARM/: JLinkLog.txt  STM32H7.uvguix.lokes  STM32H7.uvguix.tokiy  STM32H7.uvoptx  STM32H7.uvprojx  event_recorder_save_1.csv  startup_stm32h723xx.lst
CtrlBoard-H7_4310/MDK-ARM/STM32H7/: STM32H7.axf  STM32H7.build_log.htm  STM32H7.hex  STM32H7.htm  STM32H7.lnp  STM32H7.map  STM32H7_STM32H7.dep  bsp_can.d  can_bsp.crf  can_bsp.d  compute_g.d  control.d  dcmi.crf  dcmi.d  dm4310_ctrl.crf  dm4310_ctrl.d  dm4310_drv.crf  dm4310_drv.d  dm_drv.d  dma.d  eventrecorder.d  fdcan.crf  fdcan.d  gpio.crf  gpio.d  i2c.d  key_bsp.d  led_bsp.d  main.d  memorymap.d  octospi.d  retarget_io.d  spi.d  startup_stm32h723xx.d  stderr_itm.d  stdout_evr.d  stm32h7xx_hal.d  stm32h7xx_hal_cortex.crf  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dcmi.crf  (+43 more)
CtrlBoard-H7_4310/User/Control/: openarm_control.c  openarm_control.h
arm_control/: go_to_pose.py
control/: README.md  autocalibration.py  joint_limits_openarm.json  replay.py
control/canfd_control/: README.md  event_recorder_save_1.csv  plotter.py
control/socketcan_control/: DM_SocketCAN.py  calibration.py  change_baudrate.py  go_to_pose.py  record.py  replay.py  requirements.txt
software/arm_control/: README.md  autocalibration.py
teleoperation/: CMakeLists.txt  README.md  README_jp.md  package.xml
teleoperation/launch/: bilateral_openarm_main.launch.py
teleoperation/src/: bilateral_main.cpp  canbus.cpp  control.cpp  control.h  damiao_port.cpp  damiao_port.h  diff.h  dynamics.cpp  dynamics.h  global.h  motor.cpp  motor_control.cpp  motor_control.h  test01.cpp
teleoperation/urdf/: openarm_grip.urdf
tests/hardware/: DM_SocketCAN.py  DM_SocketCANFD.py  README.md  calibration.py  go_to_pose.py  joint_limits.json  joint_limits_openarm.json  record.py  requirements.txt  single_motor_test.py  single_pose_test.py
(+114 files in other folders)
